fix send button alignment

--- a/css/threads.less
+++ b/css/threads.less
@@ -183,7 +183,7 @@
       float: right;
       top: -46px;
 
-      height: 28px;
+      height: 32px;
       line-height: 30px;
       padding: 0px 10px;
 
